--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="left-section flex">
             <div class="nav-container flex">
                 <a href="#" class="company-logo">
-                    <img src="/assets/asset_ 29-svg.png" alt="company logo">
+                    <img src="./assets/asset_ 29-svg.png" alt="company logo">
         
                 </a>
                 <!--Logo end-->
